# kitsune-collectors

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: config.py  main.py
app/jobs/: fetch_calendars.py
app/models/: schemas.py
app/sql/: schema.sql
app/storage/: queries.py
kitsune/: connection.py  models.py
notebooks/: common.py  economic.py  hyperliquid.py
