[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kitsune"]

[project]
name = "kitsune-collectors"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "altair>=6.0.0",
    "duckdb>=1.5.1",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "marimo>=0.21.1",
    "polars>=1.39.3",
    "pydantic>=2.12.5",
    "websockets>=16.0",
    "yfinance>=1.2.0",
]

[dependency-groups]
dev = [
    "pyrefly>=0.58.0",
    "python-lsp-server>=1.14.0",
    "ruff>=0.15.8",
]
